fixing css issues to ensure proper display on mobile devices

--- a/css/styles.css
+++ b/css/styles.css
@@ -73,7 +73,7 @@ ul.nav a:hover {
 	border-bottom: 3px solid;
 }
 
-@media (max-width:700px) {
+@media all and (max-width: 800px){
 	
 	.container {
 		width: 100%;
